force-app/main/default/objects/Fellowship__c/Fellowship__c.object-meta.xml
<CustomObject>
    <label>Fellowship</label>
    <nameField>
        <displayFormat>F-{0}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fellowships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>