force-app/main/default/objects/Fellowship__c/fields/Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Eligibility__c</fullName>
    <defaultValue>&quot;Applicants must be current residents with a minimum of 2 years training in neurology or have obtained their board certificate/completed training within the last 3 years at the time of application; be fluent in English or the local language (host department).&quot; + BR() + BR() + &quot;Awardees from previous years are no more qualified.&quot; + BR() + BR() + &quot;All applicants must be Full member or RRFS member and work in an EAN (corresponding) member country at time of application.&quot;</defaultValue>
    <label>Eligibility</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>