force-app/main/default/objects/Fellowship__c/fields/Grant__c.field-meta.xml
<CustomField>
    <fullName>Grant__c</fullName>
    <defaultValue>&quot;Each grant is amounting to € 1,500.&quot; + BR() + &quot;Note: travel will only be reimbursed after receipt of the final report).&quot;</defaultValue>
    <label>Grant</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>