force-app/main/default/objects/Fellowship__c/fields/Hosting_Departments__c.field-meta.xml
<CustomField>
    <fullName>Hosting_Departments__c</fullName>
    <defaultValue>IF( $RecordType.DeveloperName = &quot;Clinical_Fellowship&quot;, &quot;https://www.ean.org/Clinical-Fellowship.2842.0.html&quot;, IF($RecordType.DeveloperName = &quot;Research_Fellowship&quot;,&quot;https://www.ean.org/Research-Fellowship.2839.0.html&quot;,&quot;&quot;))</defaultValue>
    <label>Hosting Departments</label>
    <type>Url</type>
</CustomField>