force-app/main/default/objects/Fellowship__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <defaultValue>IF($RecordType.DeveloperName = &quot;Clinical_Fellowship&quot;, &quot;Clinical&quot;, IF($RecordType.DeveloperName = &quot;Research_Fellowship&quot;, &quot;Research&quot;, &quot;&quot;)) + &quot; Fellowship &quot; + TEXT(YEAR(TODAY())+1)</defaultValue>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>