force-app/main/default/objects/Fellowship__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <defaultValue>&quot;The purpose of this award is to provide a well-defined observational clinical practice, service structure or technical experience to support training. The grant is to support a visit of six weeks duration.&quot;</defaultValue>
    <label>Purpose</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>