force-app/main/default/objects/Fellowship__c/fields/Submission_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Submission_Deadline__c</fullName>
    <formula>DATE(YEAR(TODAY()),10,31)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission Deadline</label>
    <type>Date</type>
</CustomField>