force-app/main/default/objects/Fellowship__c/recordTypes/Clinical_Fellowship.recordType-meta.xml
<RecordType>
    <fullName>Clinical_Fellowship</fullName>
    <active>true</active>
    <label>Clinical Fellowship</label>
</RecordType>