force-app/main/default/objects/Fellowship__c/recordTypes/Research_Fellowship.recordType-meta.xml
<RecordType>
    <fullName>Research_Fellowship</fullName>
    <active>true</active>
    <label>Research Fellowship</label>
</RecordType>